--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buk Shelf</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Borel&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="nav-bar">
-      <h1>Library</h1>
+      <h1>Buk Shelf</h1>
       <button class="add">+</button>
     </nav>
     <div class="body"></div>
