added functionality to read button and checkbox on form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
       <button class="add">+</button>
     </nav>
     <div class="body"></div>
-    <footer class="footer">Made by Thiago for the Odin Project</footer>
+    <footer class="footer">
+      Made by
+      <a class="github-profile-link" href="https://github.com/tdematos"
+        >Thiago
+      </a>
+      Copyright © 2023
+    </footer>
 
     <script src="/index.js"></script>
   </body>
